take into account the condition parameter combination when no condition filter is provided